# kebele-service-agent

./: .gitignore  DEPLOY_HF.md  QUICK_DEPLOY.md  README.md  README_HF.md  app.py  pyproject.toml  requirements.txt
src/agent/: core.py  nlu.py  prompts.py  state.py
src/config/: settings.py
src/ui/: gradio_app.py
src/utils/: file_store.py  pdf_generator.py
